[package]
name = "bs-filter"
version = "0.1.0"
authors = ["Aviram Hassan <aviram@metalbear.co>", "Oskar Matzerath <moskar.drummer@gmail.com>"]
edition = "2018"


[dependencies]
boolean_expression  = "0.3" # need to upgrade sometime
eui48               = "1"
libc                = "0.2"
byteorder = "1.3"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1"