[package]
name = "rawsocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = { version = "1", features = [
    "net",
    "rt",
    "macros",
    "rt-multi-thread",
    "process",
] }
socket2 = "0.4"
ipnetwork = "0.20"
nix = "0.25"
bs-filter = { path = "../bs-filter" }
